fix(ViewBadges): fix overflow property

--- a/ferrilata-devilline/wwwroot/styles.css
+++ b/ferrilata-devilline/wwwroot/styles.css
@@ -34,6 +34,10 @@
     padding-top: 8px;
 }
 
+.page-header {
+    overflow: hidden;
+}
+
 #add-badge {
     width: 108px;
     height: 48px;
